# firesteel-dev

./: .gitignore  .gitmodules  2d_ex.cpp  3d_ex.cpp  CMakeLists.txt  FixFlags.cmake  README.md  audio_ex.cpp  main.cpp  scene_viewer.cpp
engine/: CMakeLists.txt
engine/include/: app.hpp  cubemap.hpp  entity.hpp  misc.cpp  particles.hpp  renderer.hpp  shader.hpp  texture.hpp  window.hpp
engine/include/2d/: text.hpp
engine/include/audio/: defenitions.hpp  listener.hpp  source.hpp
engine/include/input/: input.hpp  joystick.hpp  keyboard.hpp
engine/include/utils/: stbi_global.hpp  utils.hpp
include/: app.hpp  atmosphere.hpp  billboard.hpp  camera.hpp  common.hpp  config.hpp  cubemap.hpp  editor_object.hpp  embeded.hpp  entity.hpp  fbo.hpp  light.hpp  material.hpp  mesh.hpp  particles.hpp  renderer.hpp  scene.hpp  shader.hpp  texture.hpp  transform.hpp  undo_buffer.hpp  utils.hpp  window.hpp
include/2d/: text.hpp
include/audio/: base.hpp  defenitions.hpp  listener.hpp  source.hpp  wav.hpp
include/audio/dr_libs/: dr_flac.hpp  dr_mp3.hpp
include/editor/: undo_buffer.hpp
include/imgui/: base.hpp  markdown.hpp
include/input/: input.hpp  joystick.hpp  keyboard.hpp  mouse.hpp
include/utils/: json.hpp  log.hpp  scene.hpp  stb_image.hpp  utils.hpp
include/utils/imgui/: base.hpp  font-awsome.hpp  markdown.hpp
include/xr/: vr.hpp
src/: main.cpp  misc.cpp
